--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.11.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-router": "^2.4.0"
@@ -23,6 +24,7 @@
     "babel-register": "^6.8.0",
     "gulp": "^3.9.1",
     "gulp-serve": "^1.2.0",
+    "json-server": "^0.8.12",
     "webpack-stream": "^3.2.0"
   },
   "babel": {
